add About section

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -11,5 +11,8 @@
         android:icon="@android:drawable/ic_menu_share"
         android:title="Share"
         app:showAsAction="always"/>
-
+    <item
+        android:id="@+id/about"
+        android:title="@string/about"
+        app:showAsAction="never"/>
 </menu>
