--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="activity_margin">16dp</dimen>
     <dimen name="icon_size">48dp</dimen>
+    <dimen name="icon_padding">8dp</dimen>
 </resources>
