show the Undo button only if there is something drawn

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:layout_alignParentRight="true"
         android:layout_below="@id/color_picker"
         android:padding="@dimen/icon_padding"
-        android:src="@mipmap/undo"/>
+        android:src="@mipmap/undo"
+        android:visibility="gone"/>
 
 </RelativeLayout>
