add a Facebook image at About section

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
     <dimen name="activity_margin">16dp</dimen>
     <dimen name="icon_size">48dp</dimen>
     <dimen name="icon_padding">8dp</dimen>
+    <dimen name="social_padding">8dp</dimen>
+    <dimen name="social_logo">40dp</dimen>
 </resources>
