--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -4,5 +4,5 @@
     <dimen name="social_padding">12dp</dimen>
     <dimen name="social_logo">50dp</dimen>
 
-    <dimen name="normal_text_size">18dp</dimen>
+    <dimen name="normal_text_size">18sp</dimen>
 </resources>
