--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     <com.simplemobiletools.draw.MyCanvas
         android:id="@+id/my_canvas"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@android:color/white"/>
 
     <ImageView
         android:id="@+id/color_picker"
