Added clear canvas functionality
Method "clearCanvas" added to class MyCanvas. It will clear the path list and update the canvas status on screen.

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -16,6 +16,10 @@
         android:title="@string/settings"
         app:showAsAction="never"/>
     <item
+        android:id="@+id/clear"
+        android:title="@string/clear"
+        app:showAsAction="never"/>
+    <item
         android:id="@+id/about"
         android:title="@string/about"
         app:showAsAction="never"/>
