Separated background color functionality from Clear action

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -16,6 +16,10 @@
         android:title="@string/clear"
         app:showAsAction="never"/>
     <item
+        android:id="@+id/change_background"
+        android:title="@string/change_background"
+        app:showAsAction="never"/>
+    <item
         android:id="@+id/settings"
         android:title="@string/settings"
         app:showAsAction="never"/>
