--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:id="@+id/menu_save"
         android:icon="@mipmap/save"
@@ -11,6 +12,20 @@
         android:icon="@mipmap/share"
         android:title="@string/share"
         app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/menu_color_picker"
+        android:icon="@mipmap/color_picker"
+        android:title="@string/undo"
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/menu_undo"
+        android:icon="@mipmap/undo"
+        android:title="@string/undo"
+        android:visible="false"
+        app:showAsAction="ifRoom"/>
+
     <item
         android:id="@+id/clear"
         android:title="@string/clear"
