--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
         android:max="75"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="9dp" />
+        android:layout_marginBottom="9dp"
+        android:visibility="gone"/>
 
 </RelativeLayout>
