--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,8 @@
     <dimen name="social_logo">40dp</dimen>
     <dimen name="settings_padding">8dp</dimen>
     <dimen name="stroke_bar_size">150dp</dimen>
+    <dimen name="preview_dot_stroke_size">2dp</dimen>
+    <dimen name="preview_dot_offset_y">50dp</dimen>
 
     <dimen name="normal_text_size">14sp</dimen>
 </resources>
