couple styling updates

--- a/app/src/main/res/layout/save_file.xml
+++ b/app/src/main/res/layout/save_file.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="@dimen/activity_margin">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="@dimen/activity_margin">
 
     <TextView
         android:id="@+id/file_name_label"
@@ -38,5 +39,4 @@
             android:layout_height="wrap_content"
             android:text=".svg"/>
     </RadioGroup>
-
 </RelativeLayout>
