--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,14 +7,15 @@
         android:title="@string/save"
         app:showAsAction="ifRoom"/>
     <item
+        android:id="@+id/clear"
+        android:icon="@mipmap/ic_clear"
+        android:title="@string/clear"
+        app:showAsAction="ifRoom"/>
+    <item
         android:id="@+id/menu_share"
         android:icon="@mipmap/share"
         android:title="@string/share"
         app:showAsAction="ifRoom"/>
-    <item
-        android:id="@+id/clear"
-        android:title="@string/clear"
-        app:showAsAction="never"/>
     <item
         android:id="@+id/change_background"
         android:title="@string/change_background"
