--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,17 +12,17 @@
 
     <ImageView
         android:id="@+id/color_picker"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
+        android:layout_width="@dimen/normal_icon_size"
+        android:layout_height="@dimen/normal_icon_size"
         android:layout_alignParentRight="true"/>
 
     <ImageView
         android:id="@+id/undo"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
+        android:layout_width="@dimen/normal_icon_size"
+        android:layout_height="@dimen/normal_icon_size"
         android:layout_alignParentRight="true"
         android:layout_below="@id/color_picker"
-        android:padding="@dimen/icon_padding"
+        android:padding="@dimen/medium_margin"
         android:src="@mipmap/undo_black"
         android:visibility="gone"/>
 
@@ -34,7 +34,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="12dp"
         android:max="75"
-        android:padding="@dimen/icon_padding"
+        android:padding="@dimen/medium_margin"
         android:progress="5"
         android:visibility="gone"/>
 
