renaming or removing some image resources

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentRight="true"
         android:layout_below="@id/color_picker"
         android:padding="@dimen/medium_margin"
-        android:src="@mipmap/undo_black"
+        android:src="@drawable/ic_undo"
         android:visibility="gone"/>
 
     <SeekBar
