--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,17 +3,17 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_save"
-        android:icon="@mipmap/save"
+        android:icon="@drawable/ic_save"
         android:title="@string/save"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/clear"
-        android:icon="@mipmap/ic_clear"
+        android:icon="@drawable/ic_clear"
         android:title="@string/clear"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/menu_share"
-        android:icon="@mipmap/share"
+        android:icon="@drawable/ic_share"
         android:title="@string/share"
         app:showAsAction="ifRoom"/>
     <item
