add a jpg radio button to saving dialog

--- a/app/src/main/res/layout/dialog_save_image.xml
+++ b/app/src/main/res/layout/dialog_save_image.xml
@@ -56,5 +56,11 @@
             android:layout_height="wrap_content"
             android:text=".svg"/>
 
+        <com.simplemobiletools.commons.views.MyCompatRadioButton
+            android:id="@+id/save_image_radio_jpg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=".jpg"/>
+
     </RadioGroup>
 </LinearLayout>
