--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -26,7 +27,7 @@
         android:src="@drawable/ic_undo"
         android:visibility="gone"/>
 
-    <SeekBar
+    <com.simplemobiletools.commons.views.MySeekBar
         android:id="@+id/stroke_width_bar"
         android:layout_width="@dimen/stroke_bar_size"
         android:layout_height="wrap_content"
