--- a/app/src/main/res/layout/dialog_save_image.xml
+++ b/app/src/main/res/layout/dialog_save_image.xml
@@ -44,7 +44,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_margin"
             android:singleLine="true"
-            android:textCursorDrawable="@null"/>
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/normal_text_size"/>
 
         <RadioGroup
             android:id="@+id/save_image_radio_group"
