--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,15 @@
         android:background="@android:color/white"/>
 
     <ImageView
+        android:id="@+id/redo"
+        android:layout_width="@dimen/normal_icon_size"
+        android:layout_height="@dimen/normal_icon_size"
+        android:layout_toLeftOf="@+id/eraser"
+        android:padding="@dimen/medium_margin"
+        android:src="@drawable/ic_redo"
+        android:visibility="gone"/>
+
+    <ImageView
         android:id="@+id/eraser"
         android:layout_width="@dimen/normal_icon_size"
         android:layout_height="@dimen/normal_icon_size"
