fix #88, fix an error at sharing in some cases

--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <cache-path name="shared_images" path="images/"/>
+    <cache-path name="shared_images" path="/"/>
     <external-path name="external_files" path="."/>
-    <root-path name="external_files" path="/storage/"/>
+    <root-path name="external_files" path="/"/>
 </paths>
