--- a/app/src/main/res/layout/dialog_save_image.xml
+++ b/app/src/main/res/layout/dialog_save_image.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_margin"
-            android:layout_marginLeft="@dimen/activity_margin"
+            android:layout_marginLeft="@dimen/medium_margin"
             android:paddingRight="@dimen/small_margin"
             android:paddingTop="@dimen/small_margin"/>
 
@@ -42,6 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_margin"
+            android:layout_marginLeft="@dimen/small_margin"
             android:singleLine="true"
             android:textCursorDrawable="@null"
             android:textSize="@dimen/normal_text_size"/>
